log/build_2022-08-09_14-07-30/robot_control/stderr.log
  File "/home/louis/dev_robot/install/robot_control/lib/python3.8/site-packages/robot_control/path_control.py", line 71
    print('Publishing data: left:%s right:%s'%msg.data[0],%msg.data[1])
                                                          ^
SyntaxError: invalid syntax

